--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -29,6 +31,9 @@
             android:exported="true"
             android:theme="@style/Theme.RealEstateManager">
         </activity>
+
+        <!-- FOR GOOGLE MAPS -->
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/MAPS_API_KEY"/>
 
     </application>
 
