--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Enables or disables configuration cache that effects build performances
 org.gradle.configuration-cache=true
