--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_ic_launcher_round"
         android:supportsRtl="true"
+        android:enableOnBackInvokedCallback="true" tools:targetApi="tiramisu"
         android:theme="@style/Theme.RealEstateManager"
-        android:name=".ApplicationRoot"
-        tools:targetApi="31">
+        android:name=".ApplicationRoot">
 
         <activity
             android:name=".RealEstateManagerActivity"
