--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 # Enables or disables configuration cache that effects build performances
 org.gradle.configuration-cache=true
-
+# Makes the app remaining on the emulator after running instrumented test since Gradle 8.2
+android.injected.androidTest.leaveApksInstalledAfterRun=true
